some fragments added

--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -12,4 +12,21 @@
         android:hint="@string/crime_title_hint"
         android:inputType="text" />
 
+    <Button
+        android:id="@+id/crime_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        tools:text="Jan 25, 2017" />
+
+    <CheckBox
+        android:id="@+id/crime_solved"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:text="@string/crime_solved_label" />
+
+
 </LinearLayout>
