--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="by.verus.criminalintent.CrimeFragment">
+    tools:context="by.verus.criminalintent.fragment.CrimeFragment">
 
     <EditText
         android:id="@+id/crime_title"
